# ROS2_CREATE_ROBOT_BASICS

01_Basics/UI/create_robot_buttons_py/: package.xml  setup.cfg  setup.py
01_Basics/UI/create_robot_buttons_py/create_robot_buttons_py/: Main.py
01_Basics/UI/create_robot_docking_py/: package.xml  setup.cfg  setup.py
01_Basics/UI/create_robot_docking_py/create_robot_docking_py/: Main.py
01_Basics/UI/create_robot_leds_py/: package.xml  setup.cfg  setup.py
01_Basics/UI/create_robot_leds_py/create_robot_leds_py/: Main.py
01_Basics/UI/create_robot_movement_py/: UpdateNode.sh  package.xml  setup.cfg  setup.py
01_Basics/UI/create_robot_movement_py/create_robot_movement_py/: CreateBotNavigator.py  move_avoid_naive.py  move_simple.py  nav_to_pose.py
01_Basics/UI/create_robot_sensors_py/: package.xml  setup.cfg  setup.py
01_Basics/UI/create_robot_sensors_py/create_robot_sensors_py/: Main.py
